--- a/Application/src/main/res/values/base-strings.xml
+++ b/Application/src/main/res/values/base-strings.xml
@@ -21,8 +21,7 @@
         <![CDATA[
         
             
-            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
-            you can display camera preview and take pictures.
+            This app is a fork of Google\'s Camera example. Built upon by dylanneve1.
             
         
         ]]>
